# BumbleBee

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEV-NOTES.md  LICENSE  README.md  ROADMAP.md  build.sh  build_parser.sh  pyproject.toml  run_tests_multi_python.py
.claude/skills/code-review/: SKILL.md
.claude/skills/development/: SKILL.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: benchmark_runner.py  benchmark_runner.py.old  run_bumblebee.sh  tmp
benchmarks/configs/: bumblebee_asp.json  bumblebee_asp_mt.json  bumblebee_sql.json  clingo_asp.json  clingo_asp2.json  duckdb_sql.json
benchmarks/results/: bumblebee_asp_benchmark_results_20250801_184405.csv  bumblebee_asp_benchmark_results_20250801_185241.csv  bumblebee_asp_benchmark_results_20250803_120558.csv  bumblebee_asp_benchmark_results_20250803_183755.csv  bumblebee_asp_benchmark_results_20250803_211754.csv  bumblebee_asp_benchmark_results_20250814_213718.csv  bumblebee_asp_benchmark_results_20250816_183339.csv  bumblebee_asp_benchmark_results_20250816_191400.csv  bumblebee_asp_benchmark_results_20250818_200111.csv  bumblebee_asp_benchmark_results_20250818_211310.csv  bumblebee_asp_benchmark_results_20250911_185151.csv  bumblebee_asp_benchmark_results_20250912_180002.csv  bumblebee_asp_benchmark_results_20250925_181721.csv  bumblebee_asp_benchmark_results_20251008_105701.csv  bumblebee_asp_benchmark_results_20251016_181220.csv  bumblebee_asp_benchmark_results_20251019_173302.csv  bumblebee_asp_benchmark_results_20251111_220534.csv  bumblebee_asp_benchmark_results_20251128_174646.csv  bumblebee_asp_benchmark_results_20251203_201847.csv  bumblebee_asp_benchmark_results_20251206_183457.csv  bumblebee_asp_benchmark_results_20251211_151932.csv  bumblebee_asp_benchmark_results_20251215_140148.csv  bumblebee_asp_benchmark_results_20251215_184055.csv  bumblebee_asp_benchmark_results_20251217_125653.csv  bumblebee_asp_benchmark_results_20251219_161330.csv  bumblebee_asp_benchmark_results_20251224_130135.csv  bumblebee_asp_benchmark_results_20260102_110607.csv  bumblebee_asp_benchmark_results_20260103_115702.csv  bumblebee_asp_benchmark_results_20260123_211805.csv  bumblebee_asp_benchmark_results_20260129_133307.csv  bumblebee_asp_benchmark_results_20260130_225648.csv  bumblebee_asp_benchmark_results_20260207_181448.csv  bumblebee_asp_benchmark_results_20260209_220714.csv  bumblebee_asp_benchmark_results_20260211_205802.csv  bumblebee_asp_benchmark_results_20260213_090638.csv  bumblebee_asp_benchmark_results_20260214_180954.csv  bumblebee_asp_benchmark_results_20260216_162716.csv  bumblebee_asp_benchmark_results_20260217_104310.csv  bumblebee_asp_benchmark_results_20260221_152116.csv  bumblebee_asp_benchmark_results_20260222_192505.csv  (+87 more)
docker/linux/: Dockerfile  README.md
examples/: README.md
examples/data/: departments.csv  employees.csv  nations.parquet  products.csv  sales.csv
examples/dl/01_import/: basic_csv_import.dl  csv_with_options.dl  parquet_import.dl  parquet_with_options.dl
examples/dl/02_export/: export_csv.dl  export_csv_options.dl  export_parquet.dl  export_parquet_options.dl
examples/dl/03_aggregations/: basic_aggregation.dl  explicit_groups.dl  multiple_aggregates.dl
examples/dl/04_recursion/: graph_reachability.dl  transitive_closure.dl
examples/dl/05_order_by/: order_by_limit.dl
examples/dl/06_like/: like_filter.dl
examples/python/: 01_getting_started.py  02_dataframe_analytics.py  03_multi_source_join.py  04_recursive_analysis.py  05_iterative_queries.py
examples/sql/01_import/: basic_csv_import.sql  csv_with_options.sql  parquet_import.sql  parquet_with_options.sql
examples/sql/02_export/: export_csv_basic.sql  export_csv_options.sql
examples/sql/03_aggregations/: basic_aggregates.sql  group_by.sql  having_filter.sql
examples/sql/04_order_by/: order_by_limit.sql
examples/sql/05_in_clause/: in_constant_list.sql  in_subquery.sql  not_in.sql
examples/sql/06_subqueries/: scalar_subquery.sql
examples/sql/07_like/: like_filter.sql
python/: build_and_test.sh  requirements.txt
python/src/: PandasScan.cpp  PyBumbleBee.cpp  PyPredicateTable.cpp  VectorConversion.cpp  VectorWrapper.cpp  bindings.cpp
python/test/: conftest.py  test_aggregates.py  test_api.py  test_bindings.py  test_constructor.py  test_examples.py  test_facts.py  test_load_dataframe.py  test_predicate_table.py  test_recursion.py  test_rules.py  test_run_file.py  test_sql_csv.py  test_sql_multiple_runs.py  test_sql_parquet.py  test_to_df.py  test_type_conversion.py
src/: BumbleBeeDB.cpp  ClientContext.cpp
src/catalog/: Catalog.cpp  PredicateTables.cpp  Schema.cpp
src/common/: Allocator.cpp  ArithOperator.cpp  BufferedCSVReader.cpp  ErrorHandler.cpp  FileBuffer.cpp  FileSystem.cpp  Hash.cpp  Limits.cpp  LocalFileSystem.cpp  Log.cpp  NumericUtils.cpp  StringUtils.cpp
src/execution/: AggregateChunkOneHashTable.cpp  AggregateHashTable.cpp  AggregatePRLHashTable.cpp  ChunkOneHashTable.cpp  Expression.cpp  JoinHashTable.cpp  JoinPRLHashTable.cpp  NestedLoopJoin.cpp  PRLHashTable.cpp  PartitionedAggHT.cpp  PartitionedPRLHashTable.cpp  PhysicalAtom.cpp  PhysicalAtomProfiler.cpp  PhysicalRule.cpp  PhysicalRuleExecutor.cpp  ProbeRLHashTable.cpp  RowLayoutJoinHashTable.cpp  TopNHeap.cpp
src/function/: AggregateFunction.cpp  Function.cpp  FunctionRegister.cpp
src/main/: main.cpp
src/output/: TextOutputBuilder.cpp
src/parallel/: Scheduler.cpp  Task.cpp  TaskExecutor.cpp
src/parser/: ParserInputBuilder.cpp  ParserInputDirector.cpp  aspcore2.l  aspcore2.y  aspcore2_lexer.hpp  aspcore2_parser.c  aspcore2_parser.h  aspcore2_parser.hpp  aspcore2_parser.output
src/planner/: Planner.cpp  StatementDependency.cpp
src/storage/: BlockHandle.cpp  BufferHandle.cpp  BufferManager.cpp  ManagedBuffer.cpp  SingleFileBlockManager.cpp  StorageInfo.cpp
test/: test.py  utils.py
test/e2e/: README.md  gen_asp_expected.py  gen_asp_test.py  gen_sql_expected.py  output.csv  stmp2  stmpa  stmpe  test.py  test_diff.sh  test_like_debug.dl  tmp1  tmp2  tmpa  tmpe  utils.py
test/unit/: sample_test.cpp
(+1594 files in other folders)
