[build-system]
requires = ["scikit-build-core>=0.3", "pybind11>=3.0", "setuptools-scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "bumblebeedb"
dynamic = ["version"]
description = "BumbleBee Datalog analytics engine"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [{name = "Davide Fuscà"}]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2,<=2.3.3",
    "pyarrow",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/dave90/BumbleBee"
Repository = "https://github.com/dave90/BumbleBee"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
write_to = "python/_version.py"

[tool.scikit-build]
# Build only the Python extension (bumblebee_lib is a dependency, built automatically)
build.targets = ["pyBumbleBee"]
cmake.build-type = "Release"
# Only install the 'python' component — skips googletest and other targets
install.components = ["python"]
# No Python-side package — the extension module is the whole package
wheel.packages = []